--- a/contrib/gitian-descriptors/gitian-linux.yml
+++ b/contrib/gitian-descriptors/gitian-linux.yml
@@ -33,7 +33,7 @@ packages:
 - "ca-certificates"
 - "python3"
 remotes:
-- "url": "https://github.com/nobilitas/nobilitas.git"
+- "url": "https://github.com/Mirkolance1/nobilitas.git"
   "dir": "nobilitas"
 files: []
 script: |
