--- a/contrib/gitian-descriptors/gitian-osx.yml
+++ b/contrib/gitian-descriptors/gitian-osx.yml
@@ -29,7 +29,7 @@ packages:
 - "python3-setuptools"
 - "fonts-tuffy"
 remotes:
-- "url": "https://github.com/nobilitas/nobilitas.git"
+- "url": "https://github.com/Mirkolance1/nobilitas.git"
   "dir": "nobilitas"
 files:
 - "MacOSX10.11.sdk.tar.gz"
