--- a/contrib/gitian-descriptors/gitian-win.yml
+++ b/contrib/gitian-descriptors/gitian-win.yml
@@ -24,7 +24,7 @@ packages:
 - "python3"
 - "rename"
 remotes:
-- "url": "https://github.com/nobilitas/nobilitas.git"
+- "url": "https://github.com/Mirkolance1/nobilitas.git"
   "dir": "nobilitas"
 files: []
 script: |
